# code-execution-mcp

./: README.md  pyproject.toml
src/code_execution_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_code_validation.py  test_pii_handling.py  test_sandbox_execution.py  test_skills.py  test_tool_registry.py  test_workspace.py
tools_registry/: full_catalog.json
tools_registry/memory/: enhanced_memory.json
tools_registry/security/: crypto_tools.json  dos_detector.json  file_analyzer.json  hids.json  network_scanner.json  threat_intel.json  web_vuln_scanner.json
