[project]
name = "code-execution-mcp"
version = "0.1.0"
description = "Code Execution MCP - Efficient agent operations through sandboxed code execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "fastmcp",
    "RestrictedPython>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
